# middleout-proxy-rs

./: Cargo.toml  README.md
src/: audit.rs  config.rs  cost.rs  main.rs  rate_limit.rs
src/cache/: embedders.rs  l1.rs  l2.rs  mod.rs  normalize.rs
src/compression/: cache_wall.rs  jl.rs  lsh_dedupe.rs  mod.rs
src/compression/engines/: base.rs  caveman.rs  comment_strip.rs  diff_compactor.rs  json_aware.rs  json_collapse.rs  log_collapse.rs  mod.rs  path_collapse.rs  rtk.rs  stack_trace.rs
src/server/: auth.rs  dashboard.rs  metrics.rs  mod.rs  policies.rs  preview.rs  responses.rs  streaming.rs
src/sim/: jl_index.rs  lsh.rs  minhash.rs  mod.rs  simhash.rs
